// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Table with everything 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c14 {
  background-color: #e1ebfa;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
}

.c21 {
  padding-right: 24px;
  text-align: right;
}

.c26 {
  padding-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c20 {
  color: currentColor;
  min-width: 32px;
}

.c23 {
  padding: 4px;
  color: currentColor;
  min-width: 32px;
}

.c28 {
  margin-left: -8px;
  color: currentColor;
  min-width: 24px;
}

.c32 {
  margin-right: -8px;
  color: currentColor;
  min-width: 24px;
}

.c16 {
  margin-top: 0;
  margin-bottom: 0;
  font-weight: 600;
  font-size: 16px;
  line-height: 1.5;
  color: #122b47;
}

.c5 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  min-height: 24px;
  vertical-align: top;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 4px 0;
}

.c22 {
  background: transparent;
  border: none;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 0px;
  color: #00438f;
  cursor: pointer;
}

.c22 .c19 {
  border-radius: 50%;
  -webkit-transition: .2s;
  transition: .2s;
}

.c22 .c15 {
  display: block;
  font-weight: 500;
  text-align: left;
}

.c22 .IconicButton__HoverText-sc-1u3dojp-0 {
  opacity: 0;
}

.c22:hover .c19 {
  background-color: #e1ebfa;
}

.c22:hover .IconicButton__HoverText-sc-1u3dojp-0 {
  opacity: 1;
}

.c22:active .c19 {
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  -webkit-transition: .2s ease-in;
  transition: .2s ease-in;
}

.c22:disabled {
  opacity: .5;
}

.c22:disabled:hover .c19,
.c22:disabled:active .c19 {
  background: none;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.c22:focus {
  outline: none;
}

.c22:focus .c19 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c22:focus .IconicButton__HoverText-sc-1u3dojp-0 {
  opacity: 1;
}

.c18 {
  background: transparent;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px;
  border-radius: 50%;
  color: #434d59;
}

.c18:focus {
  outline: none;
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c18:hover:enabled {
  cursor: pointer;
  color: #122b47;
  background-color: #e4e7eb;
}

.c8 {
  min-width: 16px;
  height: 16px;
  border-radius: 2px;
  border: solid 1px;
  position: relative;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c8:before {
  content: '';
  display: none;
  position: relative;
  left: 4px;
  width: 3px;
  height: 9px;
  border: solid #ffffff;
  border-radius: 1px;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c6 {
  position: absolute;
  opacity: 0;
  height: 1px;
  width: 1px;
}

.c6:focus + .c7 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c6:checked + .c7 {
  border-color: #00438f;
  background-color: #00438f;
}

.c6:checked + .c7:before {
  display: block;
}

.c6:not(:checked) + .c7 {
  border-color: #c0c8d1;
  background-color: #ffffff;
}

.c4 {
  padding: 4px 0;
}

.c4 .c15 {
  margin-left: 8px;
}

.c3 {
  font-weight: normal;
  text-align: left;
  padding: 16px 0;
  padding-right: 16px;
  color: #434d59;
  width: 30px;
}

.c3:first-child {
  padding-left: 16px;
}

.c9 {
  font-weight: normal;
  text-align: left;
  padding: 16px 0;
  padding-right: 16px;
  color: #434d59;
  width: 15%;
}

.c9:first-child {
  padding-left: 16px;
}

.c10 {
  font-weight: normal;
  text-align: left;
  padding: 16px 0;
  padding-right: 16px;
  color: #434d59;
  width: 20%;
}

.c10:first-child {
  padding-left: 16px;
}

.c11 {
  font-weight: normal;
  text-align: left;
  padding: 16px 0;
  padding-right: 16px;
  color: #434d59;
  width: 45%;
}

.c11:first-child {
  padding-left: 16px;
}

.c12 {
  font-weight: normal;
  text-align: left;
  padding: 16px 0;
  padding-right: 16px;
  color: #434d59;
  width: 5%;
}

.c12:first-child {
  padding-left: 16px;
}

.c25 {
  font-weight: normal;
  text-align: left;
  padding: 16px 0;
  padding-right: 16px;
  color: #434d59;
  width: auto;
}

.c25:first-child {
  padding-left: 16px;
}

.c2 {
  color: #434d59;
  border-bottom: 1px solid #e4e7eb;
}

.c17 {
  padding-top: 16px;
  padding-bottom: 16px;
  padding-right: 16px;
}

.c17:first-child {
  padding-left: 16px;
}

.c13:hover {
  background-color: #f0f2f5;
}

.c24:first-of-type {
  border-top: 1px solid #e4e7eb;
}

.c1 {
  border-collapse: collapse;
  width: 100%;
  background: white;
}

.c27 {
  font-size: 14px;
  padding: 8px 16px;
  line-height: 1.71428571;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  border: 1px solid #e4e7eb;
  color: #c0c8d1;
  cursor: default;
}

.c27:not(:last-child) {
  margin-right: 16px;
}

.c27:hover {
  background: inital;
}

.c31 {
  font-size: 14px;
  padding: 8px 16px;
  line-height: 1.71428571;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  border: 1px solid #e4e7eb;
  color: #011e38;
  cursor: pointer;
}

.c31:not(:last-child) {
  margin-right: 16px;
}

.c31:hover {
  background: #e4e7eb;
}

.c29 {
  font-size: 14px;
  padding: 8px 16px;
  line-height: 1.71428571;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  border: 1px solid #00438f;
  color: #c0c8d1;
  cursor: default;
  background: #00438f;
  color: #f0f2f5;
}

.c29:not(:last-child) {
  margin-right: 16px;
}

.c29:hover {
  background: #00438f;
}

.c30 {
  font-size: 14px;
  padding: 8px 16px;
  line-height: 1.71428571;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  border: 1px solid #e4e7eb;
  color: #011e38;
  cursor: pointer;
  background: transparent;
  color: #011e38;
}

.c30:not(:last-child) {
  margin-right: 16px;
}

.c30:hover {
  background: #e4e7eb;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <table
      className="c1 Table"
    >
      <thead>
        <tr
          className="c2"
        >
          <th
            className="c3"
            data-testid="table-head"
            scope="col"
            width="30px"
          >
            <div
              className="c4"
            >
              <label
                className="c5"
                disabled={false}
              >
                <input
                  aria-invalid={false}
                  aria-label="select all"
                  aria-required={false}
                  checked={false}
                  className="c6 c4"
                  disabled={false}
                  id={null}
                  onChange={[Function]}
                  required={false}
                  type="checkbox"
                />
                <div
                  checked={false}
                  className="c7 c8"
                  data-testid="visual-checkbox"
                  disabled={false}
                />
              </label>
            </div>
          </th>
          <th
            className="c3"
            data-testid="table-head"
            scope="col"
            width="30px"
          />
          <th
            className="c9"
            data-testid="table-head"
            scope="col"
            width="15%"
          >
            Date
          </th>
          <th
            className="c10"
            data-testid="table-head"
            scope="col"
            width="20%"
          >
            Expected Quantity
          </th>
          <th
            className="c10"
            data-testid="table-head"
            scope="col"
            width="20%"
          >
            Actual Quantity
          </th>
          <th
            className="c11"
            data-testid="table-head"
            scope="col"
            width="45%"
          >
            Note
          </th>
          <th
            className="c12"
            data-testid="table-head"
            scope="col"
            width="5%"
          >
            
          </th>
        </tr>
      </thead>
      <tbody
        data-testid="table-body"
      >
        <tr
          className="c13"
          data-testid="table-row"
        >
          <td
            colSpan={7}
          >
            <div
              className="c14"
            >
              <p
                className="c15 c16"
                color="blackBlue"
                disabled={false}
                fontSize="medium"
                fontWeight="bold"
              >
                ABC & XYZ Company
              </p>
            </div>
          </td>
        </tr>
        <tr
          className="c13"
          data-testid="table-row"
        >
          <td
            className="c17"
          >
            <div
              className="c4"
            >
              <label
                className="c5"
                disabled={false}
              >
                <input
                  aria-invalid={false}
                  aria-label="deselect item 12"
                  aria-required={false}
                  checked={false}
                  className="c6 c4"
                  disabled={false}
                  id={null}
                  onChange={[Function]}
                  required={false}
                  type="checkbox"
                />
                <div
                  checked={false}
                  className="c7 c8"
                  data-testid="visual-checkbox"
                  disabled={false}
                />
              </label>
            </div>
          </td>
          <td
            className="c17"
          >
            <button
              aria-label="Expand row"
              className="c18"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="c19 c20"
                color="currentColor"
                fill="currentColor"
                focusable={false}
                height="32px"
                icon="downArrow"
                size="32px"
                title={null}
                viewBox="0 0 24 24"
                width="32px"
              >
                <path
                  d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                />
              </svg>
            </button>
          </td>
          <td
            className="c17"
          >
            Tue, 01 Oct 2019
          </td>
          <td
            className="c17"
          >
            2,025 eaches
          </td>
          <td
            className="c17"
          >
            1,800 eaches
          </td>
          <td
            className="c17"
          >
            
          </td>
          <td
            colSpan={null}
          >
            <div
              className="c21"
            >
              <button
                aria-describedby={null}
                aria-expanded={false}
                aria-haspopup={true}
                aria-label="Open"
                className="c22 "
                disabled={null}
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  className="c19 c23"
                  color="currentColor"
                  fill="currentColor"
                  focusable={false}
                  height="32px"
                  icon="more"
                  p="half"
                  size="32px"
                  title={null}
                  viewBox="0 0 24 24"
                  width="32px"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </button>
            </div>
          </td>
        </tr>
        <tr
          className="c13"
          data-testid="table-row"
        >
          <td
            className="c17"
          >
            <div
              className="c4"
            >
              <label
                className="c5"
                disabled={false}
              >
                <input
                  aria-invalid={false}
                  aria-label="Select row"
                  aria-required={false}
                  checked={false}
                  className="c6 c4"
                  disabled={false}
                  id={null}
                  onChange={[Function]}
                  required={false}
                  type="checkbox"
                />
                <div
                  checked={false}
                  className="c7 c8"
                  data-testid="visual-checkbox"
                  disabled={false}
                />
              </label>
            </div>
          </td>
          <td
            className="c17"
          />
          <td
            className="c17"
          >
            Wed, 02 Oct 2019
          </td>
          <td
            className="c17"
          >
            2,475 eaches
          </td>
          <td
            className="c17"
          >
            2,250 eaches
          </td>
          <td
            className="c17"
          >
            
          </td>
          <td
            colSpan={null}
          >
            <div
              className="c21"
            >
              <button
                aria-describedby={null}
                aria-expanded={false}
                aria-haspopup={true}
                aria-label="Open"
                className="c22 "
                disabled={null}
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  className="c19 c23"
                  color="currentColor"
                  fill="currentColor"
                  focusable={false}
                  height="32px"
                  icon="more"
                  p="half"
                  size="32px"
                  title={null}
                  viewBox="0 0 24 24"
                  width="32px"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </button>
            </div>
          </td>
        </tr>
        <tr
          className="c13"
          data-testid="table-row"
        >
          <td
            className="c17"
          >
            <div
              className="c4"
            >
              <label
                className="c5"
                disabled={false}
              >
                <input
                  aria-invalid={false}
                  aria-label="Select row"
                  aria-required={false}
                  checked={false}
                  className="c6 c4"
                  disabled={false}
                  id={null}
                  onChange={[Function]}
                  required={false}
                  type="checkbox"
                />
                <div
                  checked={false}
                  className="c7 c8"
                  data-testid="visual-checkbox"
                  disabled={false}
                />
              </label>
            </div>
          </td>
          <td
            className="c17"
          />
          <td
            className="c17"
          >
            Thu, 03 Oct 2019
          </td>
          <td
            className="c17"
          >
            2,475 eaches
          </td>
          <td
            className="c17"
          >
            1,425 eaches
          </td>
          <td
            className="c17"
          >
            
          </td>
          <td
            colSpan={null}
          >
            <div
              className="c21"
            >
              <button
                aria-describedby={null}
                aria-expanded={false}
                aria-haspopup={true}
                aria-label="Open"
                className="c22 "
                disabled={null}
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  className="c19 c23"
                  color="currentColor"
                  fill="currentColor"
                  focusable={false}
                  height="32px"
                  icon="more"
                  p="half"
                  size="32px"
                  title={null}
                  viewBox="0 0 24 24"
                  width="32px"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </button>
            </div>
          </td>
        </tr>
        <tr
          className="c13"
          data-testid="table-row"
        >
          <td
            className="c17"
          >
            <div
              className="c4"
            >
              <label
                className="c5"
                disabled={false}
              >
                <input
                  aria-invalid={false}
                  aria-label="Select row"
                  aria-required={false}
                  checked={false}
                  className="c6 c4"
                  disabled={false}
                  id={null}
                  onChange={[Function]}
                  required={false}
                  type="checkbox"
                />
                <div
                  checked={false}
                  className="c7 c8"
                  data-testid="visual-checkbox"
                  disabled={false}
                />
              </label>
            </div>
          </td>
          <td
            className="c17"
          />
          <td
            className="c17"
          >
            Fri, 04 Oct 2019
          </td>
          <td
            className="c17"
          >
            2,475 eaches
          </td>
          <td
            className="c17"
          >
            675 eaches
          </td>
          <td
            className="c17"
          >
            1c Other Plant-related issue, equipment issues
          </td>
          <td
            colSpan={null}
          >
            <div
              className="c21"
            >
              <button
                aria-describedby={null}
                aria-expanded={false}
                aria-haspopup={true}
                aria-label="Open"
                className="c22 "
                disabled={null}
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  className="c19 c23"
                  color="currentColor"
                  fill="currentColor"
                  focusable={false}
                  height="32px"
                  icon="more"
                  p="half"
                  size="32px"
                  title={null}
                  viewBox="0 0 24 24"
                  width="32px"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </button>
            </div>
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr
          className="c24"
        >
          <th
            className="c25"
            colSpan={3}
            scope="row"
          >
            Total
          </th>
          <td
            className="c17"
          >
            18,000 eaches
          </td>
          <td
            className="c17"
          >
            7,725 eaches
          </td>
          <td
            className="c17"
          >
            
          </td>
          <td
            className="c17"
          >
            
          </td>
        </tr>
        <tr
          className="c24"
        >
          <th
            className="c25"
            colSpan={3}
            scope="row"
          >
            Attainment
          </th>
          <td
            className="c17"
          >
            
          </td>
          <td
            className="c17"
          >
            41.5%
          </td>
          <td
            className="c17"
          >
            
          </td>
          <td
            className="c17"
          >
            
          </td>
        </tr>
      </tfoot>
    </table>
    <nav
      aria-label="Pagination navigation"
      className="c26 "
    >
      <button
        aria-label="Go to previous results"
        className="c27"
        disabled={true}
        onClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="c19 c28"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="24px"
          icon="leftArrow"
          ml="-8px"
          size="24px"
          title={null}
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
          />
        </svg>
         
        Previous
      </button>
      <button
        aria-current={true}
        aria-label={null}
        className="c29"
        disabled={true}
        onClick={[Function]}
      >
        1
      </button>
      <button
        aria-current={false}
        aria-label="Go to page {{count}}"
        className="c30"
        disabled={false}
        onClick={[Function]}
      >
        2
      </button>
      <button
        aria-current={false}
        aria-label="Go to page {{count}}"
        className="c30"
        disabled={false}
        onClick={[Function]}
      >
        3
      </button>
      <button
        aria-label="Go to next results"
        className="c31"
        disabled={false}
        onClick={[Function]}
      >
        Next
         
        <svg
          aria-hidden={true}
          className="c19 c32"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="24px"
          icon="rightArrow"
          mr="-8px"
          size="24px"
          title={null}
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
          />
        </svg>
      </button>
    </nav>
  </div>
</div>
`;

exports[`Storyshots Table with pagination 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c6 {
  padding-top: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c8 {
  margin-left: -8px;
  color: currentColor;
  min-width: 24px;
}

.c13 {
  margin-right: -8px;
  color: currentColor;
  min-width: 24px;
}

.c11 {
  padding-top: 8px;
  padding-bottom: 8px;
  margin-right: 16px;
  margin-top: 0;
  margin-bottom: 0;
  font-size: 14px;
  line-height: 1.71428571;
  color: currentColor;
}

.c3 {
  font-weight: normal;
  text-align: left;
  padding: 16px 0;
  padding-right: 16px;
  color: #434d59;
  width: auto;
}

.c3:first-child {
  padding-left: 16px;
}

.c2 {
  color: #434d59;
  border-bottom: 1px solid #e4e7eb;
}

.c5 {
  padding-top: 16px;
  padding-bottom: 16px;
  padding-right: 16px;
}

.c5:first-child {
  padding-left: 16px;
}

.c4:hover {
  background-color: #f0f2f5;
}

.c1 {
  border-collapse: collapse;
  width: 100%;
  background: white;
}

.c7 {
  font-size: 14px;
  padding: 8px 16px;
  line-height: 1.71428571;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  border: 1px solid #e4e7eb;
  color: #c0c8d1;
  cursor: default;
}

.c7:not(:last-child) {
  margin-right: 16px;
}

.c7:hover {
  background: inital;
}

.c12 {
  font-size: 14px;
  padding: 8px 16px;
  line-height: 1.71428571;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  border: 1px solid #e4e7eb;
  color: #011e38;
  cursor: pointer;
}

.c12:not(:last-child) {
  margin-right: 16px;
}

.c12:hover {
  background: #e4e7eb;
}

.c9 {
  font-size: 14px;
  padding: 8px 16px;
  line-height: 1.71428571;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  border: 1px solid #00438f;
  color: #c0c8d1;
  cursor: default;
  background: #00438f;
  color: #f0f2f5;
}

.c9:not(:last-child) {
  margin-right: 16px;
}

.c9:hover {
  background: #00438f;
}

.c10 {
  font-size: 14px;
  padding: 8px 16px;
  line-height: 1.71428571;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 4px;
  border: 1px solid #e4e7eb;
  color: #011e38;
  cursor: pointer;
  background: transparent;
  color: #011e38;
}

.c10:not(:last-child) {
  margin-right: 16px;
}

.c10:hover {
  background: #e4e7eb;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <table
      className="c1 Table"
    >
      <thead>
        <tr
          className="c2"
        >
          <th
            className="c3"
            data-testid="table-head"
            scope="col"
          >
            Date
          </th>
          <th
            className="c3"
            data-testid="table-head"
            scope="col"
          >
            Expected Quantity
          </th>
          <th
            className="c3"
            data-testid="table-head"
            scope="col"
          >
            Actual Quantity
          </th>
        </tr>
      </thead>
      <tbody
        data-testid="table-body"
      >
        <tr
          className="c4"
          data-testid="table-row"
        >
          <td
            className="c5"
          >
            2019-10-01
          </td>
          <td
            className="c5"
          >
            2,025 eaches
          </td>
          <td
            className="c5"
          >
            1,800 eaches
          </td>
        </tr>
      </tbody>
      <tfoot />
    </table>
    <nav
      aria-label="Pagination navigation"
      className="Box-sc-1qu1edy-0 c6 "
    >
      <button
        aria-label="Go to previous results"
        className="c7"
        disabled={true}
        onClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="c8"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="24px"
          icon="leftArrow"
          ml="-8px"
          size="24px"
          title={null}
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
          />
        </svg>
         
        Previous
      </button>
      <button
        aria-current={true}
        aria-label={null}
        className="c9"
        disabled={true}
        onClick={[Function]}
      >
        1
      </button>
      <button
        aria-current={false}
        aria-label="Go to page {{count}}"
        className="c10"
        disabled={false}
        onClick={[Function]}
      >
        2
      </button>
      <button
        aria-current={false}
        aria-label="Go to page {{count}}"
        className="c10"
        disabled={false}
        onClick={[Function]}
      >
        3
      </button>
      <button
        aria-current={false}
        aria-label="Go to page {{count}}"
        className="c10"
        disabled={false}
        onClick={[Function]}
      >
        4
      </button>
      <button
        aria-current={false}
        aria-label="Go to page {{count}}"
        className="c10"
        disabled={false}
        onClick={[Function]}
      >
        5
      </button>
      <p
        className="c11"
        color="currentColor"
        disabled={false}
        fontSize="small"
      >
        ...
      </p>
      <button
        aria-current={false}
        aria-label="Go to page {{count}}"
        className="c10"
        disabled={false}
        onClick={[Function]}
      >
        8
      </button>
      <button
        aria-label="Go to next results"
        className="c12"
        disabled={false}
        onClick={[Function]}
      >
        Next
         
        <svg
          aria-hidden={true}
          className="c13"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="24px"
          icon="rightArrow"
          mr="-8px"
          size="24px"
          title={null}
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
          />
        </svg>
      </button>
    </nav>
  </div>
</div>
`;
